--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="script.js"></script>
 </head>
-<body>
+<body class="bg">
 <script src="script.js"></script>
 <div class="main1" name="pop">
 <form action="system.php" method="post">
@@ -13,10 +13,10 @@
 <p align="center"><input type="text" size="20" name="login"></p>
 <h2 align="center">Пароль:</h2>
 <p align="center"><input type="password" size="20" name="pas"></p>
-<p align="center"><input type="submit" value="Отправить"></p>
+<p align="center"><input type="submit" class="button" value="Отправить"></p>
 </form>
 <form action="reg.html" method="post">
-<p align="center"><input type="submit" value="Регистрация"></p>
+<p align="center"><input type="submit" class="button" value="Регистрация"></p>
 </form>
 </div>
 </body>
