--- a/reg.html
+++ b/reg.html
@@ -2,7 +2,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body class="bg">
 <div class="main2">
 <h1 align="center"> Регистрация нового пользователя </h1>
 <form action="thanks.php" method="post">
@@ -14,11 +14,11 @@
 <p class="title1"><input type="text" size="20" name="fio"></p>
 <h2 class="title1"> E-Mail </h2>
 <p class="title1"><input type="email" size="20" name="email"></p>
-<p class="title1"><input type="submit" value="Регистрация"></p>
-<p class="title1"><input type="reset" value="Сброс данных"></p>
+<p class="title1"><input type="submit" class="button" value="Регистрация"></p>
+<p class="title1"><input type="reset" class="button" value="Сброс данных"></p>
 </form>
 <form action="index.html">
-<p class="title1"><input type="submit" value="Назад"></p>
+<p class="title1"><input type="submit" class="button" value="Назад"></p>
 </form>
 </div>
 </body>
