--- a/index.html
+++ b/index.html
@@ -2,18 +2,16 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
-<script src="script.js"></script>
 </head>
 <body class="bg">
-<script src="script.js"></script>
-<div class="main1" name="pop">
+<div class="main1">
 <form action="system.php" method="post">
 <h1 align="center">Вход в систему</h1>
 <h2 align="center">Логин:</h2>
 <p align="center"><input type="text" size="20" name="login"></p>
 <h2 align="center">Пароль:</h2>
 <p align="center"><input type="password" size="20" name="pas"></p>
-<p align="center"><input type="submit" class="button" value="Отправить"></p>
+<p align="center"><input type="submit" class="button" value="Вход"></p>
 </form>
 <form action="reg.html" method="post">
 <p align="center"><input type="submit" class="button" value="Регистрация"></p>
