--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body class="bg">
 <div class="main1">
 <form action="system.php" method="post">
-<h1 align="center">Вход в систему</h1>
-<h2 align="center">Логин:</h2>
+<h1 align="center" class="title3">Вход в систему</h1>
+<h2 align="center" class="title3">Логин:</h2>
 <p align="center"><input type="text" size="20" name="login"></p>
-<h2 align="center">Пароль:</h2>
+<h2 align="center" class="title3">Пароль:</h2>
 <p align="center"><input type="password" size="20" name="pas"></p>
 <p align="center"><input type="submit" class="button" value="Вход"></p>
 </form>
