--- a/reg.html
+++ b/reg.html
@@ -1,10 +1,11 @@
 ﻿<html>
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body class="bg">
 <div class="main2">
-<h1 align="center"> Регистрация нового пользователя </h1>
+<h1 align="center" class="title3"> Регистрация нового пользователя </h1>
 <form action="thanks.php" method="post">
 <h2 class="title1"> Логин </h2>
 <p class="title1"><input type="text" size="20" name="log1"></p>
