--- a/reg.html
+++ b/reg.html
@@ -2,18 +2,19 @@
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <title>Регистрация</title>
 </head>
 <body class="bg">
 <div class="main2">
 <h1 align="center" class="title3"> Регистрация нового пользователя </h1>
 <form action="thanks.php" method="post">
-<h2 class="title1"> Логин </h2>
+<h2 class="title4"> Логин </h2>
 <p class="title1"><input type="text" size="20" name="log1"></p>
-<h2 class="title1"> Пароль </h2>
+<h2 class="title4"> Пароль </h2>
 <p class="title1"><input type="password" size="20" name="pass"></p>
-<h2 class="title1"> ФИО </h2>
+<h2 class="title4"> ФИО </h2>
 <p class="title1"><input type="text" size="20" name="fio"></p>
-<h2 class="title1"> E-Mail </h2>
+<h2 class="title4"> E-Mail </h2>
 <p class="title1"><input type="email" size="20" name="email"></p>
 <p class="title1"><input type="submit" class="button" value="Регистрация"></p>
 <p class="title1"><input type="reset" class="button" value="Сброс данных"></p>
