--- a/reg.html
+++ b/reg.html
@@ -16,6 +16,8 @@
 <p class="title1"><input type="text" size="20" name="fio"></p>
 <h2 class="title4"> E-Mail </h2>
 <p class="title1"><input type="email" size="20" name="email"></p>
+<h2 class="title4"> Дата рождения (дд.мм.гггг) </h2>
+<p class="title1"><input type="text" size="20" name="birthday"></p>
 <p class="title1"><input type="submit" class="button" value="Регистрация"></p>
 <p class="title1"><input type="reset" class="button" value="Сброс данных"></p>
 </form>
