--- a/reg.html
+++ b/reg.html
@@ -22,7 +22,7 @@
 <p class="title1"><input type="reset" class="button" value="Сброс данных"></p>
 </form>
 <form action="index.html">
-<p class="title1"><input type="submit" class="button" value="Назад"></p>
+<h1 align="center"><input type="submit" class="button" value="Назад"></h1>
 </form>
 </div>
 </body>
